--- a/Dashboard/templates/about.html
+++ b/Dashboard/templates/about.html
@@ -116,9 +116,9 @@
                 <h2 class="h2 pb-3">Data Requirements</h2>
                 <p class="text-muted pb-3 light-300">
                     The value that we want to predict is the value (price) of a property. 
-                    The required information to make a prediction are the features of the house 
+                    The required information to make a prediction are the features of the property 
                     (e.g., gross building area, the number of rooms, the number of bedrooms, etc), 
-                    the condition of the house, the location, etc.
+                    the condition of the property, the location, etc.
                 </p>
             </div>
         </div>
@@ -138,7 +138,7 @@
                 <div class="objective-icon card m-auto py-4 mb-2 mb-sm-4 bg-secondary shadow-lg">
                     <i class="display-4 bx bxs-analyse text-light"></i>
                 </div>
-                <h2 class="objective-heading h3 mb-2 mb-sm-4 light-300"> ML Techniques</h2>
+                <h2 class="objective-heading h3 mb-2 mb-sm-4 light-300"> ML Technique</h2>
                 <p class="light-300">
                     Since the value (price) that we want to predict is a continuous value, 
                     this problem can be addressed with Supervised Learning, more specifically with Regression.
