--- a/Dashboard/templates/result.html
+++ b/Dashboard/templates/result.html
@@ -88,7 +88,7 @@
                 <li><i class="bx bxs-circle me-2"></i>{{ 'Gross Building Area : {} ft\u00b2'.format(spec['gba']) }}</li>
                 <li><i class="bx bxs-circle me-2"></i>{{ 'Land Area : {} ft\u00b2'.format(spec['landarea']) }}</li>
                 <li><i class="bx bxs-circle me-2"></i>{{ 'Style : {}'.format(spec['style'])}}</li>
-                <li><i class="bx bxs-circle me-2"></i>{{ 'Use Code: '}} {{ '11 - Single family residential homes used as such' if spec['usecode'] == '11' else ('12 - Single family residential home with non-economic 2nd unit' if spec['usecode'] == '12' else ('13 - Single family residential home with slight commercial/ind' if spec['usecode'] == '13' else ('15 - Townhouse - Planned Development' if spec['usecode'] == '15' else ('19 - SFR - Manufactured Home' if spec['usecode'] == '19' else ('23 - Triplex, double or duplex with single family home' if spec['usecode'] == '23' else '24 - Four living units; e.g. fourplex or triplex with SFR'))))) }}</li>
+                <li><i class="bx bxs-circle me-2"></i>{{ 'Use Code : '}} {{ '11 - Single family residential homes used as such' if spec['usecode'] == '11' else ('12 - Single family residential home with non-economic 2nd unit' if spec['usecode'] == '12' else ('13 - Single family residential home with slight commercial/ind' if spec['usecode'] == '13' else ('15 - Townhouse - Planned Development' if spec['usecode'] == '15' else ('19 - SFR - Manufactured Home' if spec['usecode'] == '19' else ('23 - Triplex, double or duplex with single family home' if spec['usecode'] == '23' else '24 - Four living units; e.g. fourplex or triplex with SFR'))))) }}</li>
                 <li><i class="bx bxs-circle me-2"></i>{{ 'Number of Rooms : {}'.format(spec['rooms'])}}</li>
                 <li><i class="bx bxs-circle me-2"></i>{{ 'Number of Bedrooms : {}'.format(spec['bedrooms']) }}</li>
                 <li><i class="bx bxs-circle me-2"></i>{{ 'Number of Bathrooms : {}'.format(spec['bathrooms']) }}</li>
@@ -98,7 +98,7 @@
                 <li><i class="bx bxs-circle me-2"></i>{{ 'Air Conditioner : '}} {{ 'Yes' if spec['ac'] == 'Y' else 'No' }}</li>
                 <li><i class="bx bxs-circle me-2"></i>{{ 'Heating System : {}'.format(spec['heat'])}}</li>
                 <li><i class="bx bxs-circle me-2"></i>{{ 'Roof : '}} {{ 'Shake / Metal-Sms / Shingle / Concrete Tile / Water Proof / Clay Tile / Slate / Neopren / Wood-FS / Metal-Cpr' if spec['roof'] == '1' else 'Concrete / Comp Shingle / Built Up / Metal-Pre / Typical / Composition Ro' }}</li>
-                <li><i class="bx bxs-circle me-2"></i>{{ 'Structure : '}} {{ 'Row End / Single / Row Inside / Default' if spec['struct'] == '1' else 'Semi-Detached / Multi / Town Inside / Town End' }}</li>  
+                <li><i class="bx bxs-circle me-2"></i>{{ 'Structure : '}} {{ 'Single / Row Inside / Default' if spec['struct'] == '1' else 'Semi-Detached / Multi / Town Inside / Town End / Row End' }}</li>  
             </ul>
         </div>
     </div>
